# airflow

./: .Rbuildignore  .gitignore  DESCRIPTION  LICENSE  LICENSE.md  NAMESPACE  R.R  README.md  README.rst  data.feather  intro  lib.R  lib.py  lib.py_  make.R  pyproject.toml  run_batch.py  script.R  script.py  secure.txt  setup.py  setup_python.R  state.py
.Rproj.user/6BA8F9E0/pcs/: files-pane.pper
.Rproj.user/FEA09D8D/pcs/: files-pane.pper
R/: cube.R_  lib.R_  query.R  skip
app/: app.R  data_1.csv  data_2.csv  pyadomd_script.py  script.py
app_py/: app.py  prophet.py
chapter03/docker/airflow-data/: Dockerfile
chapter08/: docker-compose.yml
chapter18/: docker-compose.yml
files/dailyCheckApp/: general.R.gpg  server.R.gpg  ui.R.gpg
files/dailyCheckData/: CopyOfqueriesSalesforce.csv.gpg  queriesSalesforce.csv.gpg  storage.csv.gpg
files/dailyCheckUpdate/: general.R.gpg  server.R.gpg  ui.R.gpg  update.R.gpg  upgrade.R.gpg
inx/: example.py
inx.egg-info/: PKG-INFO  SOURCES.txt
latest/: README
pyexample.egg-info/: PKG-INFO
src/inx/: Inkscape.py  Potrace.py  actions.py  extension.py  trace.py  utils.py
tutorial/: README.md  _tutorial.py  docker-compose.yml
tutorial/dags/: dag_joke_collector.py  example_xcom.py_  out_file.txt  sftp.py  tutorial.py  tutorial_r.py  tutorial_taskflow_api.py_
tutorial/dags/custom_operator/: hello_operator.py  sftp_operator.py
working/: .gitignore  build.R  inx_win.ipynb  lib.py
working/.ipynb_checkpoints/: inx_win-checkpoint.ipynb
