[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "inx"
version = "0.0.41"
authors = [
  { name="Jacek Pardyak", email="jacek.pardyak@gmail.com" },
]
description = "Wrapper for Inkscape https://inkscape.org/"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"
